--- a/main.css
+++ b/main.css
@@ -12,13 +12,12 @@
   
   body {
       margin: 0;
-      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+      line-height: 1.5;
+      text-align: left;
       font-size: 1rem;
       font-weight: 400;
-      line-height: 1.5;
-      /*color: #ffffff;*/
-      text-align: left;
-      background-color: #ffffff !important;
+      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+      background-color: white !important;
   }
   
   @font-face {
@@ -52,46 +51,7 @@
   .footer {
     width: 100%;
   }
-  /* Nav Bar Begins Here*/
-  nav {
-    background-color: maroon;
-  }
-  
-  nav .navbar-nav li a{
-    color: white;
-  }
-  
-  /* nav .navbar-nav .dropdown-menu a{
-    color: black;
-  } */
-  
-  nav .navbar-header a{
-    color: white !important;
-  }
-  
-  .dropdown:hover .dropdown-menu {
-    display: block;
-  }
-  
-  .dropdown-menu:hover {
-    display: block;
-  }
-  
-  .dropdown {
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-  
-  /* .dropdown:hover {
-    background-color: black;
-  } */
-  
-  .dropdown-menu {
-    background-color: red;
-    margin-top: -1px;
-  }
-  
-  /* Nav Bar Ends Here*/
+
   
   h2 {
     font-size: 32px;
@@ -128,98 +88,14 @@
   }
   
   #content-background {
-    background: linear-gradient(145deg, lightblue, lightpink, salmon, lightblue);
-    background-size: 250% 250%, 100% 100%;
     margin-top: -50px;
-    padding-top: 100px;
+    /* background must come before background-size */
+    background: linear-gradient(160deg, lightblue, lightpink, salmon, lightblue);
+    background-size: 300% 225%, 100% 100%;
     flex-grow: 1;
+    padding-top: 100px;
   }
-  
-  /*
-  Technical Portfolio Bubble START
-  */
-  
-  
-  .tpb-tag {
-    border-style: solid;
-    border-width: 2px 2px;
-    border-color: red;
-    border-radius: 20px;
     
-    text-align: center;
-    background-color: maroon;
-    color: white;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 200px;
-  }
-  
-  .center-h {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .tbp-left {
-    padding-left: 100px;
-    width: 600px;
-  }
-  
-  .tbp-right {
-    padding-right: 100px;
-  }
-  
-  .tbp-table {
-    border-spacing: 100px 0;
-    border-collapse: separate;
-  
-    /* border-style: solid;
-    border-width: 2px 2px;
-    border-color: red;
-    border-radius: 20px; */
-    margin-left: -90px;
-    margin-right: -90px;
-  }
-  
-  .tp-bubble {
-    border-style: solid;
-    border-width: 2px 2px;
-    border-color: red;
-    border-radius: 20px;
-  
-    background-color: lightgrey;
-    background: linear-gradient(45deg, salmon, lightgrey, red, blue);
-    background-size: 250% 250%, 100% 100%;
-  }
-  
-  .tbp-desc {
-    border-style: solid;
-    border-width: 2px 2px;
-    border-color: red;
-    border-radius: 20px;
-  
-    background-color: maroon;
-    color: white;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  
-  .tbp-image {
-    width: 500px;
-    height: 400px;
-  }
-  
-  .tbp-wrap {
-    word-wrap: break-word;
-  }
-  
-  /*
-  Technical Portfolio Bubble END
-  */
-  
   .right {
     text-align: right;
   }
@@ -234,12 +110,6 @@
     overflow: auto;
   }
   
-  .valiantGC {
-    width: 957px !important;
-    height: 518px !important;
-    margin-top: 100px !important;
-  }
-
   #submission-contents  {
     overflow-y: scroll;
     overflow-x: visible;
@@ -249,7 +119,7 @@
   }
 
   .file-line {
-    font-size: 11px;
+    font-size: 16px;
     text-indent: -40px; 
     padding-left: 40px;
     color: white;
@@ -304,7 +174,7 @@
 
   .tc-out-line {
     color: white;
-    font-size: 12px;
+    font-size: 16px;
     line-height: 0.8;
   }
 
@@ -317,7 +187,7 @@
   }
 
   .debug-line {
-    font-size: 11px;
+    font-size: 16px;
     text-indent: -40px; 
     padding-left: 40px;
     color: white;
@@ -344,30 +214,42 @@
 
   .th-debug-name {
     width: 20%;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .th-debug-type {
     width: 20%;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .th-debug-value {
     width: 60%;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .td-debug-name {
     width: 20%;
-    font-size: 12px;
+    font-size: 16px;
   }
 
   .td-debug-type {
     width: 20%;
-    font-size: 12px;
+    font-size: 16px;
   }
 
   .td-debug-value {
     width: 60%;
-    font-size: 12px;
+    font-size: 16px;
+  }
+
+  #logout-section {
+    position: absolute;
+    top: 100px;
+    right: 100px;
+  }
+
+  #signup-section {
+    position: absolute;
+    top: 100px;
+    right: 175px;
   }
