--- a/main.css
+++ b/main.css
@@ -110,20 +110,35 @@
     overflow: auto;
   }
   
+  #file-submission-wrapper {
+    /*display: flex;*/
+  }
+
   #submission-contents  {
     overflow-y: scroll;
     overflow-x: visible;
     background-color: black;
     height: 650px;
-    width: 568px;
+    width: 580px;
+    /*flex: 1 0 50%;*/
+    min-width: 0;
   }
 
   .file-line {
     font-size: 16px;
     text-indent: -40px; 
     padding-left: 40px;
+    margin-left: 10px;
+    margin-bottom: 3px;
     color: white;
-    line-height: 0.8;
+    width: 100%;
+    white-space: nowrap;
+    /*line-height: 0.8;*/
+    
+  }
+
+  .file-line-div {
+    position: relative;
   }
 
   .file-line-index {
@@ -242,6 +257,11 @@
     font-size: 16px;
   }
 
+  #run-debug-BPL {
+    display: inline;
+    width: 0px;
+  }
+
   #logout-section {
     position: absolute;
     top: 100px;
@@ -262,5 +282,20 @@
 
   #run-viz-speed-label {
     width: 50px;
+    display: inline;
+  }
+
+  #edit-tc {
+    margin-top: 50px;
+  }
+
+  .breakpoint {
+    color: red;
+    position: absolute;
+    display: none;
+    margin-left: -2px;
+  }
+
+  .file-line-div:hover .breakpoint {
     display: inline;
   }
